# new-relic-api-demo

./: .env.template  .gitignore  Untitled.ipynb  data.csv  pyproject.toml
